# cth_cmake

./: .gitignore  MULTI_PATH_EXAMPLE.md  cth_assertions.cmake  cth_install_utilities.cmake  cth_setup_utilities.cmake  cth_target_utilities.cmake  cth_tool_utilities.cmake  install_utilities.cmake  readme.md  setup_utilities.cmake  target_utilities.cmake  tool_utilities.cmake  toolchain.cmake
.github/scripts/: verify_and_run.py
.github/workflows/: build-image.yml  ci.yml  docker-image.yml  example-basic.yml  example-modules.yml  reusable-test.yml  run-example.yml  run-tests.yml  test-suite.yml
docker/: Dockerfile
examples/basic/: CMakeLists.txt  CMakePresets.json
examples/basic/build_test/: CMakeCache.txt
examples/basic/incl/: main.hpp
examples/basic/src/: main.cpp
examples/modules/: CMakeLists.txt  CMakePresets.json
examples/modules/modules/: test.cppm
examples/modules/src/: main.cpp  test.cpp
